apps/ptg-react-app/src/app/examples/chatbot/Chat.css
/* Chat.css */
.chatContainer::-webkit-scrollbar {
  width: 0;
  height: 0;
}

.chatContainer:hover::-webkit-scrollbar {
  width: 8px;
}

.chatContainer:hover::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 10px;
}

.chatContainer:hover::-webkit-scrollbar-track {
  background: transparent;
}
.chatContainer {
  scrollbar-width: thin; /* Make scrollbar thin */
  scrollbar-color: transparent transparent; /* Set scrollbar color to transparent */
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 80%;
  margin: 0 auto;
  background-color: #222;
  color: #e0e0e0;
  overflow-y: auto;
}
.messages {
  flex: 1;
  padding: 20px;
  background-color: #222;
  border-radius: 8px 8px 0 0;
  overflow-y: auto;
}

.message.user {
  width: fit-content;
  max-width: 50%;
  margin-left: auto;
  margin-right: 4%;
  overflow-wrap: break-word;
}

.message.user .messageText {
  background-color: rgba(46, 125, 50, 0.85);
  color: #e0e0e0;
  padding: 0.75rem 1.25rem;
  border-radius: 0.5rem;
}

.message.ai {
  width: fit-content;
  margin-left: 4%;
  margin-right: 2%;
  overflow-wrap: break-word;
  padding: 0.75rem 1.25rem;
  border-radius: 0.5rem;
}
.message.ai .messageText {
  background-color: rgba(38, 50, 56, 0.85);
  color: #cfd8dc;
  padding: 0.75rem 1.25rem;
  border-radius: 0.5rem;
}

.imageContainer {
  margin-top: 5px;
}
.uploadedImage {
  max-width: 100%;
  border-radius: 8px;
}
.loadingIndicator {
  text-align: center;
  font-style: italic;
  color: #888;
}
.inputContainer {
  display: flex;
  align-items: center;
  padding: 10px;
  background-color: black;
  border: 1px solid #222;

  border-radius: 15px;
  position: relative;
  margin-bottom: 15px;
}
input[type='text'] {
  flex: 1;
  padding: 10px;
  border: 1px solid #222;
  border-radius: 20px;
  margin-right: 10px;
  font-size: 16px;
  background-color: black;
  color: white;
}
input[type='file'] {
  display: none;
}
.uploadIcon {
  cursor: pointer;
  margin-right: 10px;
}
.previewContainer {
  display: flex;
  align-items: center;
  margin-right: 10px;
}
.previewImage {
  max-width: 50px;
  max-height: 50px;
  border-radius: 4px;
  margin-right: 5px;
}
.deleteImageBtn {
  background: none;
  border: none;
  cursor: pointer;
  color: #ff4d4d;
}
.ptg-ui-aichatbot-button {
  padding: 10px 15px;
  border: none;
  border-radius: 20px;
  background-color: #007bff;
  color: white;
  font-size: 16px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}
.ptg-ui-aichatbot-button:disabled {
  background-color: #ccc;
  cursor: not-allowed;
}
.ptg-ui-aichatbot-button:hover:not(:disabled) {
  background-color: #0056b3;
}

@media (max-width: 768px) {
  .chatContainer {
    width: 90%;
  }
}

@media (max-width: 480px) {
  .chatContainer {
    width: 99%;
  }
  .messages {
    padding: 10px;
    overflow-x: hidden;
  }
  .message.ai {
    margin-left: 0;
    margin-right: auto;
    overflow-wrap: break-word;
    word-wrap: break-word;
    word-break: break-word;
  }
}

.codeBlock {
  display: grid;
  grid-template-rows: auto 1fr;
  position: relative;
  border: 1px solid #444;
  border-radius: 8px;
  padding: 16px;
  background-color: #1e1e1e;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
}

.codeBlock pre {
  background-color: #2a2a2a;
  padding: 10px;
  border-radius: 4px;
  overflow-x: auto;
  white-space: pre;
  font-family: monospace;
  color: #e0e0e0;
}

.codeBlock button {
  position: absolute;
  top: 30px;
  right: 20px;
  background-color: #007bff;
  color: white;
  border: none;
  border-radius: 4px;
  padding: 8px;
  cursor: pointer;
  transition: background-color 0.3s;
}

.copyMessage {
  position: absolute;
  top: 30px;
  right: 20px;
  color: #28a745;
  font-size: 14px;
  transition: opacity 0.5s ease;
  opacity: 1;
}

.copyMessage.fade-out {
  opacity: 0;
}

/* Tooltip for open in new tab */
.tooltip-container {
  position: relative;
  display: inline-block;
}

.tooltip {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 5px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  top: 100%; /* Position below the button */
  left: 50%;
  margin-left: -60px; /* Center the tooltip */
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltip-container:hover .tooltip {
  visibility: visible;
  opacity: 1;
}

.btn {
  border-radius: 7px;
  border: none;
  height: 38px;
  outline: none;
  transition: 0.1s ease-in-out;
  cursor: pointer;
  font-weight: 500;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: inherit;
}

.primary {
  background: #2196f3;
  color: #ffffff;
}

.primary:hover {
  background: #0a58ca;
  color: #ffffff;
}

.secondary {
  background: gray;
  color: #ffffff;
}

.secondary:hover {
  background: #585656;
  color: #ffffff;
}

.warning {
  background: #ffa942;
  color: #ffffff;
}

.warning:hover {
  background: #e69c45;
  color: #ffffff;
}

.success {
  background: #146c43;
  color: #ffffff;
}

.success:hover {
  background: #198754;
  color: #ffffff;
}

.danger {
  background: #dd3434;
  color: #ffffff;
}

.danger:hover {
  background: #bd2c2c;
  color: #ffffff;
}

.info {
  background: #25cff2;
  color: #ffffff;
}

.info:hover {
  background: rgb(33, 150, 243);
  color: #ffffff;
}

.light {
  background: #f9fafb;
  color: #000000;
}

.light:hover {
  background: #eaecee;
  color: #008000;
}

.dark {
  background: #1a1e21;
  color: #ffffff;
}

.dark:hover {
  color: #ffffff;
  background: #4e4e4e;
}

.iconLeft {
  width: 18px;
  margin-left: 12px;
}

.iconRight {
  width: 18px;
  margin-right: 12px;
}

div[slot='btnIcon'] svg {
  width: 20px;
  height: 20px;
}

.btn .modal {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0px;
  margin: 0px;
  cursor: pointer;
  user-select: none;
  vertical-align: middle;
  appearance: none;
  text-decoration: none;
  text-transform: capitalize;
  font-family: Roboto, sans-serif;
  font-size: 0.875rem;
  line-height: 1.75;
  min-width: 64px;
  padding: 5px 15px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(33, 150, 243, 0.5);
  color: #2196f3;
  border-radius: 4px;
}

.btn-icon {
  background-color: #ffffff;
  border-radius: 50%;
  color: #2196f3;
  font-size: 12px;
  padding: 0px 4px;
}

.wrapper {
  background-color: #222;
}

